mute test_catalog_hive_orc and test_catalog_hive_parquet
exclude2

fix mariadb port